Revert "Prevent quote preview from going offscreen in cases of limited screen width."
Caused some quote previews to use more width than needed.
This reverts commit 4122bce3084f8fc25b5f0dc2e42f999f7d9430a5.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1286,9 +1286,6 @@ span.hide-announcement {
   margin: 0 !important;
   padding: 1px 2px !important;
 }
-#qp {
-  pointer-events: none;
-}
 #qp > .opContainer::after {
   content: '';
   clear: both;
